<resources>
	<string name="app_name">FHCode</string>
	<!-- Strings for menu_main.xml -->
	<string name="action_new_file">New File</string>
	<string name="action_open">Open</string>
	<string name="action_save">Save</string>
	<string name="action_save_as">Save As</string>
	<string name="action_about">About</string>
	<string name="action_settings">Settings</string>
	<!-- Strings for about + settings activities  -->
	<string name="title_activity_about">FHCode - About</string>
	<string name="title_activity_settings">FHCode - Settings</string>
	<!-- settings  -->
	<string name="settings_theme">Theme</string>
	<string name="settings_theme_radio1">Light</string>
	<string name="settings_theme_radio2">Dark</string>
	<string name="settings_theme_radio3">Black</string>
	<string name="settings_theme_radio4">System</string>
	<string name="settings_text_size">Text Size</string>
	<!-- about  -->
	<!-- Info -->
	<string name="info_heading">Info</string>
	<string name="info_text">Code editor for android.</string>
	<!-- Features -->
	<string name="features_heading">Features</string>
	<string name="features_text">"- Create, edit and save code/ text files
- Syntax highlighting for Java, XML, Python using regex
- 4 Themes: Light, Dark, Black, Auto
- Configurable text size
- Launcher Shortcuts for Settings, About, New File</string>
	<!-- License -->
	<string name="license_heading">MIT License</string>
	<string name="license_text">"Copyright © FredHappyface</string>
	<!-- Links -->
	<string name="links_heading">Links</string>
	<string name="links_text">"- Project: https://github.com/FredHappyface/Android.FHCode
- License: https://github.com/FredHappyface/Android.FHCode/blob/main/LICENSE.md</string>
	<!-- Saved dialog  -->
	<string name="dialog_saved_button">OK</string>
	<string name="dialog_saved_title">Saved!</string>
	<!-- New file dialog  -->
	<string name="dialog_new_confirm">Yes</string>
	<string name="dialog_new_cancel">No</string>
	<string name="dialog_new_title">Create New File?</string>
	<!-- Blank file text  -->
	<string name="blank_file_text">[This is a blank file, open a file or edit this file and save]</string>
	<!-- Strings for shortcuts.xml -->
	<string name="shortcut_about">About</string>
	<string name="shortcut_settings">Settings</string>
	<string name="shortcut_new_file">New File</string>
	<string name="shortcut_disabled">Shortcut Disabled</string>
</resources>
